# google-adk-samples

./: .gitignore  BUILD_AND_INSTALL.md  MANIFEST.in  PACKAGE_SUMMARY.md  QUICKSTART.md  SDK_README.md  declarative_agents.md  pyproject.toml  setup.py  validate_package.py
a2ui_agent/: a2a_test_client.py  agent.py  requirements.txt
a2ui_agent/configs/: a2ui_agent.yaml
autoresearch/: agent.py  prepare.py  train.py
autoresearch/configs/: autoresearch.yaml
basic_agent/: agent.py
book_agent/: README.md  agent.py  agent_graph.py  agent_state.py  register_skills.py  run_agent.sh  settings.py  tools.py
book_agent/chapter_agent/: SKILL.md  agent.py
book_agent/chapter_agent/configs/: chapter_agent.yaml
book_agent/chapter_agent/prompts/: instructions.md
book_agent/collation_agent/: SKILL.md  agent.py  tools.py
book_agent/collation_agent/configs/: collation_agent.yaml
book_agent/collation_agent/prompts/: instructions.md
book_agent/collation_agent/scripts/: create_pdf_file.py
book_agent/configs/agents/: book_workflow.yaml
book_agent/examples/: README.md  TOKEN_MANAGEMENT_GUIDE.md  __init__.py  chapter_agent_with_truncation_example.yaml  test_toc_agent.py
book_agent/prompts/: instructions.md
book_agent/sdk/: README.md  README_AGENT_FACTORY.md  __init__.py  agent_factory.py  ai_agent.py  ai_agent_parallel.py  constants.py  skill_registry.py  tool_registry.py  utils.py
book_agent/skills/chapter/: SKILL.md
book_agent/skills/collation/: SKILL.md
book_agent/skills/collation/scripts/: create_pdf_file.py
book_agent/skills/toc/: SKILL.md
book_agent/skills/toc/scripts/: validate_yaml.py
book_agent/toc_agent/: SKILL.md  agent.py  tools.py
book_agent/toc_agent/configs/: toc_agent.yaml
book_agent/toc_agent/prompts/: instructions.md
book_agent/utils/: read_file.py  remove_think_content.py
book_agent/yaml/: agent.yaml
declarative_agent_sdk/: .dockerignore  DOCKER.md  Dockerfile  README.md  __init__.py  __version__.py  agent_context.py  agent_factory.py  agent_logging.py  agent_registry.py  agent_state.py  ai_agent.py  ai_agent_executor.py  ai_agent_server.py  ai_graph_executor.py  ai_workflow.py  ai_workflow_server.py  base_executor.py  build-docker.sh  logging_config.py  model_factory.py  pyproject.toml  requirements.txt  run_ui.sh  skill_registry.py  token_utils.py  tool_registry.py  utils.py  workflow_factory.py  workflow_registry.py
declarative_agent_sdk/a2ui/: README.md  client.ts  contact.ts  index.html  main.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
declarative_agent_sdk/a2ui/middleware/: a2a.ts
declarative_agent_sdk/builtin_tools/: __init__.py  exec_tool.py  read_file.py  tavily_search.py  write_file.py
declarative_agent_sdk/examples/: agent_registry_example.py  exec_tool_example.py  logging_example.py  model_factory_example.py  token_truncation_example.py
declarative_agent_sdk/plugins/: __init__.py  context_updater.py  ui_context_updater.py
declarative_agent_sdk/yamls/: collation_agent.yaml  toc_agent.yaml
introduction/: agent.py
music_agent/: agent.py
music_agent/configs/: music_agent.yaml
sdk/: README.md  __init__.py  agent_factory.py  agent_state.py  ai_agent.py  constants.py  model_factory.py  pyproject.toml  skill_registry.py  token_utils.py  tool_registry.py  workflow_factory.py  workflow_registry.py
sdk/examples/: logging_example.py  model_factory_example.py  token_truncation_example.py  vllm_test.py
skills/a2ui/: SKILL.md
skills/ace-music/: SKILL.md
skills/ace-music/scripts/: generate_music.py
skills/autoresearch/: SKILL.md
skills/storage/: SKILL.md
skills/wazy/: SKILL.md
storage_agent/: agent.py  storage_agent.yaml
storage_agent/configs/: storage_agent.yaml
wazy_agent/: agent.py  run.sh
wazy_agent/configs/: wazy_agent.yaml
