[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "declarative-agent-sdk"
version = "0.1.0"
description = "A declarative SDK for creating Google ADK agents with YAML-based configuration"
authors = [
    {name = "Your Organization", email = "contact@example.com"}
]
readme = "SDK_README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["google", "adk", "agents", "declarative", "yaml", "llm", "langgraph"]
dependencies = [
    "google-adk>=0.1.0",
    "google-genai>=0.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "langgraph>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/declarative-agent-sdk"
Documentation = "https://github.com/yourusername/declarative-agent-sdk#readme"
Repository = "https://github.com/yourusername/declarative-agent-sdk"
"Bug Tracker" = "https://github.com/yourusername/declarative-agent-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk", "sdk.*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
